Better file structure

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,120 +6,6 @@ layout: default
 
   {{ content }}
 
-  {%- if paginator.posts and paginator.posts.size > 0 -%}
-    <ul class="flex post-list">
-      {% for post in paginator.posts %}
-      <li class="flex post-card">
-        {%- assign date_format = site.minima.date_format | default: "%d.%m.%Y" -%}
-        <div class="post-image">
-          <a href="{{ post.url | relative_url }}">
-          {% if post.image %}
-            <img src="{{ post.image | prepend: site.baseurl_root }}" alt="{{ post.title | escape }}">
-          {% else %}
-            <img src="{{ site.baseurl_root }}/assets/images/default-image.jpg" alt="Default Image">
-          {% endif %}
-          </a>
-        </div>
-        <div class="flex post-info">
-          <h2 class="post-title">
-            <a href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
-          </h2>
-          <div class="post-excerpt">
-            <p>{{ post.excerpt | strip_html | truncate: 300 }}</p>
-          </div> 
-          <span class="post-meta">
-            <time datetime="{{ post.date | date_to_xmlschema }}" itemprop="datePublished">
-              {{ post.date | date: date_format }}
-            </time>
-            {%- if post.tags and post.tags.size > 0 -%}
-              ⋅ <span class="post-tags">
-                {%- for tag in post.tags -%}
-                  <a href="{{ '/tags/' | append: tag | relative_url }}" class="post-tag">#{{ tag }}</a> {{ ' ' }}
-                {%- endfor -%}
-              </span>
-            {%- endif -%}
-          </span>
-        </div>
-      </li>
-      {%- endfor -%}
-    </ul>
-
-  <!-- Paginatior -->
-  {% if paginator.total_pages > 1 %}
-  <div class="flex serif paginator">
-
-    {% assign total = paginator.total_pages %}
-    {% assign total_minus_3 = paginator.total_pages | minus: 3 %}
-    {% assign total_minus_4 = paginator.total_pages | minus: 4 %}
-    {% assign current = paginator.page %}
-
-    {% if total <= 7 %}
-      <!-- Show all pages -->
-      {% for i in (1..total) %}
-        {% if i == current %}
-          <span class="paginator-current">{{ i }}</span>
-        {% else %}
-          {% if i == 1 %}
-            <a href="{{ '/' | relative_url }}">{{ i }}</a>
-          {% else %}
-            <a href="{{ '/page' | append: i | relative_url }}">{{ i }}</a>
-          {% endif %}
-        {% endif %}
-      {% endfor %}
-
-    {% elsif current <= 4 %}
-      <!-- Beginning range -->
-      {% for i in (1..4) %}
-        {% if i == current %}
-          <span class="paginator-current">{{ i }}</span>
-        {% else %}
-          {% if i == 1 %}
-            <a href="{{ '/' | relative_url }}">{{ i }}</a>
-          {% else %}
-            <a href="{{ '/page' | append: i | relative_url }}">{{ i }}</a>
-          {% endif %}
-        {% endif %}
-      {% endfor %}
-      <a href="{{ '/page' | append: 5 | relative_url }}">5</a>
-      <span class="paginator-ellipsis">…</span>
-      <a href="{{ '/page' | append: total | relative_url }}">{{ total }}</a>
-
-    {% elsif current >= total_minus_3 %}
-      <!-- Ending range -->
-      <a href="{{ '/' | relative_url }}">1</a>
-      <span>…</span>
-      <a href="{{ '/page' | append: total_minus_4 | relative_url }}">{{ total_minus_4 }}</a>
-      {% for i in (total_minus_3..total) %}
-        {% if i == current %}
-          <span class="paginator-current">{{ i }}</span>
-        {% else %}
-          <a href="{{ '/page' | append: i | relative_url }}">{{ i }}</a>
-        {% endif %}
-      {% endfor %}
-
-    {% else %}
-      <!-- Middle range -->
-      <a href="{{ '/' | relative_url }}">1</a>
-      <span class="paginator-ellipsis">…</span>
-      {% assign prev = current | minus: 1 %}
-      {% assign next = current | plus: 1 %}
-      {% for i in (prev..next) %}
-        {% if i == current %}
-          <span class="paginator-current">{{ i }}</span>
-        {% else %}
-          <a href="{{ '/page' | append: i | relative_url }}">{{ i }}</a>
-        {% endif %}
-      {% endfor %}
-      <span class="paginator-ellipsis">…</span>
-      <a href="{{ '/page' | append: total | relative_url }}">{{ total }}</a>
-
-    {% endif %}
-
-  </div>
-  {% endif %}
-
-  {%- else -%}
-    <p>{% t paginate.zero %}</p>
-  {%- endif -%}
+  {% include posts.html %}
 
 </div>
