Refactor typography styles to use Noto Sans and Noto Serif fonts across the site

--- a/_includes/lang-switcher.html
+++ b/_includes/lang-switcher.html
@@ -1,4 +1,4 @@
-<div class="serif lang-switcher">
+<div class="sans lang-switcher">
     {% if site.lang == 'en' %}
         <a href="{{ '/ru/' | prepend: site.baseurl_root }}">ru</a>
         <span>en</span>
