--- a/_includes/navlinks.html
+++ b/_includes/navlinks.html
@@ -1,4 +1,4 @@
-<div class="flex serif nav-links">
+<div class="flex sans nav-links">
     {% if page.url == '/' or page.url == '/ru/' or page.url == '/index.html' or page.url == '/ru/index.html' %}
       <span>{% t nav.blog %}</span>
     {% else %}
