--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -1,4 +1,4 @@
-<div class="flex serif paginator">
+<div class="flex sans paginator">
 
   {% assign total = paginator.total_pages %}
   {% assign total_minus_3 = paginator.total_pages | minus: 3 %}
