--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,12 +2,12 @@
   <div class="wrapper">
     <nav class="flex site-nav">
       <a class="site-title" rel="author" href="{{ "/" | relative_url }}" title="{{ site.title | escape }}">shouldgo.me</a>
-      <div class="flex serif nav-links">
+      <div class="flex sans nav-links">
           <a href="http://instagram.com/shouldgo/">{% t nav.ig %}</a>
           <a href="https://www.facebook.com/dima.afonin/">{% t nav.fb %}</a>
           <a href="https://linkedin.com/in/shouldgo/">{% t nav.in %}</a>
       </div>
-      <span>{% t global.author %} © 2009 – {{ "now" | date: "%Y" }}</span>
+      <span class="sans">{% t global.author %} © 2009 – {{ "now" | date: "%Y" }}</span>
     </nav>
   </div>
 </footer>
