--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,11 @@
     {%- include google-analytics.html -%}
   {%- endif -%}
 
+  <!-- Noto Fonts Google API -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
   <!-- Language Redirect -->
   {% if page.url == "/" or page.url == "" or page.url == "/index.html" %}
     <script src="{{ '/assets/js/lang-redirect.js' | prepend: site.base_url }}"></script>
