--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -19,7 +19,7 @@
           <div class="post-excerpt">
             <p>{{ post.excerpt | strip_html | truncate: 300 }}</p>
           </div>
-          <span class="post-meta">
+          <span class="sans post-meta">
             <time datetime="{{ post.date | date_to_xmlschema }}" itemprop="datePublished">
               {{ post.date | date: date_format }}
             </time>
