--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,12 +1,18 @@
 ---
 ---
 
-/* BASE STYLES */
+// Base styles
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
+$primary-color: #32302c;
+$secondary-color: #A8A8A8;
+$link-blue: #337799;
+$light-grey: #F8F8F8;
 
 html, body {
   width: 100%;
@@ -14,20 +20,21 @@ html, body {
 }
 
 body {
-  color: #32302c;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  color: $primary-color;
+  font-family: "Noto Serif", 'Times New Roman', Times, serif;
   font-size: 16px;
-  line-height: 1.65;
+  line-height: 1.75;
   font-weight: 400;
   padding: 0 1em;
 }
 
-/* TYPOGRAPHY */
+// Typography
+
 $heading-styles: (
   h1: (font-size: 2em, desktop-font-size: 3em, line-height: 1.2, margin-top: 2em, margin-bottom: 1em),
-  h2: (font-size: 1.5em, desktop-font-size: 2em, line-height: 1.25, margin-top: 1.5em, margin-bottom: 0.75em),
-  h3: (font-size: 1.25em, desktop-font-size: 1.5em, line-height: 1.3, margin-top: 1.25em, margin-bottom: 0.5em),
-  h4: (font-size: 1.125em, desktop-font-size: 1.25em, line-height: 1.4, margin-top: 1em, margin-bottom: 0.5em)
+  h2: (font-size: 1.5em, desktop-font-size: 2em, line-height: 1.25, margin-top: 1.5em, margin-bottom: .75em),
+  h3: (font-size: 1.25em, desktop-font-size: 1.5em, line-height: 1.3, margin-top: 1.25em, margin-bottom: .5em),
+  h4: (font-size: 1.125em, desktop-font-size: 1.25em, line-height: 1.4, margin-top: 1em, margin-bottom: .5em)
 );
 
 @each $heading, $props in $heading-styles {
@@ -39,9 +46,10 @@ $heading-styles: (
   }
 }
 
-.serif { font-family: 'Tahoma', 'Arial', sans-serif; }
+.sans { font-family: "Noto Sans", 'Tahoma', 'Arial', sans-serif; }
 
-// Optimized text and list styles
+// Text and list styles
+
 p, ul, ol { margin: 0 0 1em 0; }
 
 ul, ol {
@@ -49,15 +57,16 @@ ul, ol {
   &:has(li img) { list-style: none; }
 }
 
-li { margin-bottom: 0.25em; }
+li { margin-bottom: .25em; }
 
 a {
-  color: #337799;
+  color: $link-blue;
   text-decoration: none;
   &:hover { text-decoration: underline; }
 }
 
-/* LAYOUT */
+// Layout
+
 .wrapper {
   margin: 0 auto;
   max-width: 960px;
@@ -73,9 +82,10 @@ img {
   height: auto;
   max-width: 100%;
   object-fit: cover;
+  border-radius: .125em;
 }
 
-/* NAVIGATION */
+// Navigation
 
 .site-header {
   margin-bottom: 2em;
@@ -91,36 +101,36 @@ img {
 
 .site-title {
   font-size: 1.25em;
-  font-weight: 900;
+  font-weight: 700;
 }
 
 .nav-links { gap: 2em; }
 
 .nav-links a, .lang-switcher a, .post-tags a {
-  color: #9c9c9c;
+  color: $secondary-color;
   &:hover, &.active { color: inherit; }
 }
 
 .lang-switcher {
   display: flex;
-  gap: 0.25em;
+  gap: .25em;
   position: absolute;
   right: 4em;
   align-items: center;
 
   > * {
     display: inline-block;
-    padding: 0.125em 0.5em 0.25em;
-    border-radius: 0.25em;
+    padding: .125em .5em .25em;
     cursor: pointer;
   }
 
   span {
-        background-color: #F8F8F8;
+        background-color: $light-grey;
+        border-radius: .25em;
   }
 }
 
-/* BURGER MENU */
+// Burger menu
 
 .burger-toggle { display: none; }
 
@@ -128,7 +138,7 @@ img {
   position: absolute;
   right: 0;
   justify-content: center;
-  gap: 0.3em;
+  gap: .3em;
   width: 2em;
   height: 2em;
   cursor: pointer;
@@ -136,15 +146,15 @@ img {
 
   span {
     display: block;
-    height: 0.1em;
+    height: .1em;
     width: 100%;
-    background: #32302c;
+    background: $primary-color;
   }
 }
 
 .burger-toggle:checked + .burger + .nav-links { display: flex; }
 
-/* PAGINATION */
+// Pagination
 
 .paginator {
   flex-direction: row;
@@ -153,21 +163,22 @@ img {
 
   > * {
     display: block;
-    padding: 0.5em 1em;
+    padding: .5em 1em;
     text-align: center;
-    color: #9c9c9c;
+    color: $secondary-color;
   }
 }
 
 .paginator-current {
-  color: #32302c;
-  background-color: #F8F8F8;
+  color: $primary-color;
+  background-color: $light-grey;
   border-radius: .25em;
 }
 
-/* POST CARDS */
+// Post cards
+
 .post-list {
-  gap: 4em;
+  gap: 3em;
   margin: 0;
   h2, p, li, ol { margin: 0; }
 }
@@ -175,7 +186,7 @@ img {
 .post-card {
   position: relative;
   align-items: stretch;
-  gap: 0.75em;
+  gap: .75em;
 }
 
 .post-image a {
@@ -184,10 +195,7 @@ img {
   height: 100%;
 }
 
-.post-info {
-  gap: 0.5em;
-  p { font-size: 1em;}
-}
+.post-info { gap: .75em; }
 
 .site-title, .post-title a { color: inherit; }
 
@@ -199,7 +207,7 @@ img {
 }
 
 .post-excerpt {
-  color: #9c9c9c;
+  color: $secondary-color;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   line-clamp: 2;
@@ -213,7 +221,7 @@ img {
   display: inline-block;
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis;
+  text-overflow: string(" ");
   max-width: 100%;
 }
 
@@ -221,7 +229,7 @@ img {
   display: inline-block;
   padding: 0 0.5em;
   border-radius: 0.25em;
-  background-color: #F8F8F8;
+  background-color: $light-grey;
 }
 
 /* POST CONTENT */
@@ -328,9 +336,8 @@ img {
   }
 
   .post-content {
-    p:has(img), div:has(img), figure, img, .highlight, ul:has(li img) {
-      max-width: 960px;
-    }
+    font-size: 1.25em;
+    p:has(img), div:has(img), figure, img, .highlight, ul:has(li img) { max-width: 960px; }
   
     img {
       max-height: 800px;
