--- a/assets/main.scss
+++ b/assets/main.scss
@@ -9,10 +9,36 @@
   box-sizing: border-box;
 }
 
+// Core variables
 $primary-color: #32302c;
 $secondary-color: #A8A8A8;
 $link-blue: #337799;
 $light-grey: #F8F8F8;
+$body-font: "Noto Serif", 'Times New Roman', Times, serif;
+$sans-font: "Noto Sans", 'Tahoma', 'Arial', sans-serif;
+$breakpoint-md: 768px;
+
+// Mixins
+@mixin light-bg {
+  background-color: $light-grey;
+  border-radius: .25em;
+}
+
+@mixin truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+@mixin line-clamp($lines) {
+  display: -webkit-box;
+  -webkit-line-clamp: $lines;
+  line-clamp: $lines;
+  -webkit-box-orient: vertical;
+  box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
 html, body {
   width: 100%;
@@ -21,7 +47,7 @@ html, body {
 
 body {
   color: $primary-color;
-  font-family: "Noto Serif", 'Times New Roman', Times, serif;
+  font-family: $body-font;
   font-size: 16px;
   line-height: 1.75;
   font-weight: 400;
@@ -46,7 +72,7 @@ $heading-styles: (
   }
 }
 
-.sans { font-family: "Noto Sans", 'Tahoma', 'Arial', sans-serif; }
+.sans { font-family: $sans-font; }
 
 // Text and list styles
 
@@ -125,8 +151,7 @@ img {
   }
 
   span {
-        background-color: $light-grey;
-        border-radius: .25em;
+        @include light-bg;
   }
 }
 
@@ -171,8 +196,7 @@ img {
 
 .paginator-current {
   color: $primary-color;
-  background-color: $light-grey;
-  border-radius: .25em;
+  @include light-bg;
 }
 
 // Post cards
@@ -195,7 +219,10 @@ img {
   height: 100%;
 }
 
-.post-info { gap: .75em; }
+.post-info {
+  gap: .75em;
+  padding: 0 .25em;
+}
 
 .site-title, .post-title a { color: inherit; }
 
@@ -208,19 +235,12 @@ img {
 
 .post-excerpt {
   color: $secondary-color;
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  line-clamp: 2;
-  -webkit-box-orient: vertical;
-  box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  @include line-clamp(2);
 }
 
 .post-meta {
   display: inline-block;
-  white-space: nowrap;
-  overflow: hidden;
+  @include truncate;
   text-overflow: string(" ");
   max-width: 100%;
 }
@@ -228,8 +248,7 @@ img {
 .post-tag {
   display: inline-block;
   padding: 0 0.5em;
-  border-radius: 0.25em;
-  background-color: $light-grey;
+  @include light-bg;
 }
 
 /* POST CONTENT */
@@ -256,7 +275,7 @@ img {
 
 /* MEDIA QUERIES */
 
-@media (min-width: 768px) {
+@media (min-width: $breakpoint-md) {
 
   /*TYPOGRAPHY */
 
@@ -296,7 +315,7 @@ img {
   .post-card {
     flex: 1 1 calc(50% - 1.5em);
     max-width: calc(50% - 1.5em);
-    height: 400px;
+    height: 420px;
     box-sizing: border-box;
     gap: 1.5em;
 
@@ -313,8 +332,7 @@ img {
       }
     
       .post-excerpt {
-        -webkit-line-clamp: 8;
-        line-clamp: 8;
+        @include line-clamp(8);
       }
     }
 
@@ -330,13 +348,13 @@ img {
 
   /* POST CONTENT */
   .post-header, .post-content > * {
-    max-width: 720px;
+    max-width: 760px;
     margin-left: auto;
     margin-right: auto;
   }
 
   .post-content {
-    font-size: 1.25em;
+    font-size: 1.125em;
     p:has(img), div:has(img), figure, img, .highlight, ul:has(li img) { max-width: 960px; }
   
     img {
