--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -1,25 +1,29 @@
 <style>
+  .grid-gallery {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1em;
+    margin: 2em auto;
+  }
+
+  .grid-item {
+    aspect-ratio: 1 / 1;
+    overflow: hidden;
+  }
+
+  .grid-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    margin: 0;
+  }
+
+  @media (max-width: 768px) {
     .grid-gallery {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 1em;
-        margin: 0 auto;
+      grid-template-columns: repeat(2, 1fr);
     }
-
-    .grid-item {
-        aspect-ratio: 1 / 1;
-        overflow: hidden;
-    }
-
-    .grid-item img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        display: block;
-        margin: 0;
-    }
-
-    @media (max-width: 768px) { .grid-gallery { grid-template-columns: repeat(2, 1fr); } }
+  }
 
 </style>
 
@@ -29,8 +33,14 @@
   {% for image in sorted_images %}
     {% unless image.path contains '/thumbs/' %}
       <div class="grid-item">
-        <a href="{{ image.path }}" class="glightbox" data-gallery="gallery">
-          <img src="{{ image.path | replace: '/gallery/', '/gallery/thumbs/' }}" alt="Gallery image" loading="lazy">
+        <a
+          href="{{ image.path }}"
+          class="glightbox"
+          data-gallery="gallery">
+          <img
+            src="{{ image.path | replace: '/gallery/', '/gallery/thumbs/' }}"
+            alt="Gallery image"
+            loading="lazy">
         </a>
       </div>
     {% endunless %}
