Add Google Analytics integration, enhance navigation with Telegram link, and refactor SCSS for improved structure and readability

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,20 @@
 <footer class="site-footer">
   <div class="wrapper">
     <nav class="flex site-nav">
-      <a class="site-title" rel="author" href="{{ "/" | relative_url }}" title="{{ site.title | escape }}">shouldgo.me</a>
+      <a
+        class="site-title"
+        rel="author"
+        href="{{ "/" | relative_url }}"
+        title="{{ site.title | escape }}">shouldgo.me</a>
       <div class="flex sans nav-links">
-          <a href="http://instagram.com/shouldgo/">{% t nav.ig %}</a>
-          <a href="https://www.facebook.com/dima.afonin/">{% t nav.fb %}</a>
-          <a href="https://linkedin.com/in/shouldgo/">{% t nav.in %}</a>
+        {% if site.lang == "ru" %}
+          <a href="https://t.me/shouldgram">{% t nav.tg %}</a>
+        {% endif %}
+        <a href="http://instagram.com/shouldgo/">{% t nav.ig %}</a>
+        <a href="https://www.facebook.com/dima.afonin/">{% t nav.fb %}</a>
+        <a href="https://linkedin.com/in/shouldgo/">{% t nav.in %}</a>
       </div>
-      <span class="sans">{% t global.author %} © 2009 – {{ "now" | date: "%Y" }}</span>
+      <span class="sans">{% t global.author %} © 2009 – {{ "now" | date: "%Y" }}</span>
     </nav>
   </div>
 </footer>
