--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,391 +1,10 @@
 ---
 ---
 
-// Base styles
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-// Core variables
-$primary-color: #32302c;
-$secondary-color: #A8A8A8;
-$link-blue: #337799;
-$light-grey: #F8F8F8;
-$body-font: "Noto Serif", 'Times New Roman', Times, serif;
-$sans-font: "Noto Sans", 'Tahoma', 'Arial', sans-serif;
-$breakpoint-md: 768px;
-
-// Mixins
-@mixin light-bg {
-  background-color: $light-grey;
-  border-radius: .25em;
-}
-
-@mixin truncate {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-@mixin line-clamp($lines) {
-  display: -webkit-box;
-  -webkit-line-clamp: $lines;
-  line-clamp: $lines;
-  -webkit-box-orient: vertical;
-  box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-html, body {
-  width: 100%;
-  overflow-x: hidden;
-}
-
-body {
-  color: $primary-color;
-  font-family: $body-font;
-  font-size: 16px;
-  line-height: 1.75;
-  font-weight: 400;
-  padding: 0 1em;
-}
-
-// Typography
-
-$heading-styles: (
-  h1: (font-size: 2em, desktop-font-size: 3em, line-height: 1.2, margin-top: 2em, margin-bottom: 1em),
-  h2: (font-size: 1.5em, desktop-font-size: 2em, line-height: 1.25, margin-top: 1.5em, margin-bottom: .75em),
-  h3: (font-size: 1.25em, desktop-font-size: 1.5em, line-height: 1.3, margin-top: 1.25em, margin-bottom: .5em),
-  h4: (font-size: 1.125em, desktop-font-size: 1.25em, line-height: 1.4, margin-top: 1em, margin-bottom: .5em)
-);
-
-@each $heading, $props in $heading-styles {
-  #{$heading} {
-    font-size: map-get($props, font-size);
-    line-height: map-get($props, line-height);
-    margin-top: map-get($props, margin-top);
-    margin-bottom: map-get($props, margin-bottom);
-  }
-}
-
-.sans { font-family: $sans-font; }
-
-// Text and list styles
-
-p, ul, ol { margin: 0 0 1em 0; }
-
-ul, ol {
-  list-style-position: inside;
-  &:has(li img) { list-style: none; }
-}
-
-li { margin-bottom: .25em; }
-
-a {
-  color: $link-blue;
-  text-decoration: none;
-  &:hover { text-decoration: underline; }
-}
-
-// Layout
-
-.wrapper {
-  margin: 0 auto;
-  max-width: 960px;
-}
-
-.flex {
-  display: flex;
-  flex-direction: column;
-}
-
-img {
-  width: 100%;
-  height: auto;
-  max-width: 100%;
-  object-fit: cover;
-  border-radius: .125em;
-}
-
-// Navigation
-
-.site-header {
-  margin-bottom: 2em;
-  .nav-links { display: none;}
-}
-
-.site-nav {
-  position: relative;
-  align-items: start;
-  gap: 3em;
-  padding: 2em 0;
-}
-
-.site-title {
-  font-size: 1.25em;
-  font-weight: 700;
-}
-
-.nav-links { gap: 2em; }
-
-.nav-links a, .lang-switcher a, .post-tags a {
-  color: $secondary-color;
-  &:hover, &.active { color: inherit; }
-}
-
-.lang-switcher {
-  display: flex;
-  gap: .25em;
-  position: absolute;
-  right: 4em;
-  align-items: center;
-
-  > * {
-    display: inline-block;
-    padding: .125em .5em .25em;
-    cursor: pointer;
-  }
-
-  span {
-        @include light-bg;
-  }
-}
-
-// Burger menu
-
-.burger-toggle { display: none; }
-
-.burger {
-  position: absolute;
-  right: 0;
-  justify-content: center;
-  gap: .3em;
-  width: 2em;
-  height: 2em;
-  cursor: pointer;
-  z-index: 101;
-
-  span {
-    display: block;
-    height: .1em;
-    width: 100%;
-    background: $primary-color;
-  }
-}
-
-.burger-toggle:checked + .burger + .nav-links { display: flex; }
-
-// Pagination
-
-.paginator {
-  flex-direction: row;
-  justify-content: center;
-  padding: 2em 0;
-
-  > * {
-    display: block;
-    padding: .5em 1em;
-    text-align: center;
-    color: $secondary-color;
-  }
-}
-
-.paginator-current {
-  color: $primary-color;
-  @include light-bg;
-}
-
-// Post cards
-
-.post-list {
-  gap: 3em;
-  margin: 0;
-  h2, p, li, ol { margin: 0; }
-}
-
-.post-card {
-  position: relative;
-  align-items: stretch;
-  gap: .75em;
-}
-
-.post-image a {
-  display: block;
-  width: 100%;
-  height: 100%;
-}
-
-.post-info {
-  gap: .75em;
-  padding: 0 .25em;
-}
-
-.site-title, .post-title a { color: inherit; }
-
-.post-title a::after {
-  content: "";
-  position: absolute;
-  inset: 0;
-  z-index: 1;
-}
-
-.post-excerpt {
-  color: $secondary-color;
-  @include line-clamp(2);
-}
-
-.post-meta {
-  display: inline-block;
-  @include truncate;
-  text-overflow: string(" ");
-  max-width: 100%;
-}
-
-.post-tag {
-  display: inline-block;
-  padding: 0 0.5em;
-  @include light-bg;
-}
-
-/* POST CONTENT */
-
-.post-header {
-  margin-bottom: 1em;
-  h1 { margin: 0 0 0.5em 0; }
-}
-
-.post-content {
-  font-size: 1.125em;
-  
-  img { margin: 2em auto;
-        display: block;
-        object-fit: contain;
-      }
-
-  iframe {
-    margin: 1em auto;
-    display: block;
-    max-width: 100%;
-  }
-}
-
-/* MEDIA QUERIES */
-
-@media (min-width: $breakpoint-md) {
-
-  /*TYPOGRAPHY */
-
-  @each $heading, $props in $heading-styles {
-    #{$heading} { font-size: map-get($props, desktop-font-size); }
-  }
-
-  /*NAVIGATION */
-  
-  .site-nav {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .burger, .burger-toggle { display: none; }
-  
-  .nav-links {
-    display: flex !important;
-    flex-direction: row;
-    gap: 3em;
-  }
-
-  .lang-switcher {
-    position: relative;
-    right: 0;
-  }
-
-  /* POSTS */
-
-  .post-list {
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 3em;
-  }
-
-  .post-card {
-    flex: 1 1 calc(50% - 1.5em);
-    max-width: calc(50% - 1.5em);
-    height: 420px;
-    box-sizing: border-box;
-    gap: 1.5em;
-
-    &:first-child {
-      flex-direction: row;
-      gap: 2em;
-      min-width: 100%;
-
-      .post-info {
-        gap: .75em;
-        min-width: 30%;
-        max-width: 328px;
-        justify-content: center;
-      }
-    
-      .post-excerpt {
-        @include line-clamp(8);
-      }
-    }
-
-    &:not(:first-child) { h2 { font-size: 1.5em; } }
-  }
-
-  .post-image {
-    flex: 1;
-    min-height: 0;
-
-    img { height: 100%; }
-  }
-
-  /* POST CONTENT */
-  .post-header, .post-content > * {
-    max-width: 760px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .post-content {
-    font-size: 1.125em;
-    p:has(img), div:has(img), figure, img, .highlight, ul:has(li img) { max-width: 960px; }
-  
-    img {
-      max-height: 800px;
-    }
-
-    ul:has(li img) {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: flex-start;
-      gap: 1em;
-      padding: 0;
-      margin: 2em 0;
-
-      li {
-        flex: 1 1 calc(50% - 0.5em);
-        max-width: calc(50% - 0.5em);
-        box-sizing: border-box;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin: 0;
-      }
-
-      img {
-        width: 100%;
-        height: auto;
-        display: block;
-        object-fit: contain;
-        margin: 0;
-      }
-    }
-  }
-}
+@import "base/variables",
+        "base/base",
+        "components/navigation",
+        "components/pagination",
+        "components/post-cards",
+        "components/post-content",
+        "components/gallery";
