--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -5,7 +5,6 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', '{{ site.google_analytics }}', { 'debug_mode': true });
-  console.log('Google Analytics initialized with ID: {{ site.google_analytics }}');
+  gtag('config', '{{ site.google_analytics }}');
   }
 </script>
