--- a/_includes/related-posts.html
+++ b/_includes/related-posts.html
@@ -2,63 +2,68 @@
 {% assign related = "" | split: "" %}
 
 {% for post in site.posts %}
-{% if post.url != page.url %}
+  {% if post.url != page.url %}
     {% assign common_tags = "" | split: "" %}
     {% for tag in post.tags %}
-    {% if page.tags contains tag %}
+      {% if page.tags contains tag %}
         {% assign common_tags = common_tags | push: tag %}
-    {% endif %}
+      {% endif %}
     {% endfor %}
     {% if common_tags.size >= 2 %}
-    {% assign related = related | push: post %}
+      {% assign related = related | push: post %}
     {% endif %}
-{% endif %}
+  {% endif %}
 {% endfor %}
 
 {% assign related = related | sort: "date" | reverse %}
 {% assign related = related | slice: 0, 3 %}
 
-{% if related.size == 0 %}
-{% assign related = site.posts | where_exp: "p", "p.url != page.url" | sort: "date" | reverse | slice: 0, 3 %}
-<h3>Newest Posts</h3>
-{% else %}
-<h3>Related Posts</h3>
-{% endif %}
+<div class="related-posts">
 
-<ul class="flex post-list related-post">
-{% for post in related %}
-    <li class="flex post-card related-post">
-    {%- assign date_format = site.minima.date_format | default: "%d.%m.%Y" -%}
-    <div class="post-image">
-        <a href="{{ post.url | relative_url }}">
-        {% if post.image %}
-        <img src="{{ post.image | prepend: site.baseurl_root }}" alt="{{ post.title | escape }}">
-        {% else %}
-        <img src="{{ site.baseurl_root }}/assets/images/default-image.jpg" alt="Default Image">
-        {% endif %}
-        </a>
-    </div>
-    <div class="flex post-info">
-        <h2 class="post-title">
-        <a href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
-        </h2>
-        <div class="post-excerpt">
-        <p>{{ post.excerpt | strip_html | truncate: 300 }}</p>
-        </div> 
-        <span class="post-meta">
-        <time datetime="{{ post.date | date_to_xmlschema }}" itemprop="datePublished">
-            {{ post.date | date: date_format }}
-        </time>
-        {%- if post.tags and post.tags.size > 0 -%}
-            ⋅ <span class="post-tags">
-            {%- for tag in post.tags -%}
-                <a href="{{ '/tags/' | append: tag | relative_url }}" class="post-tag">#{{ tag }}</a> {{ ' ' }}
-            {%- endfor -%}
-            </span>
-        {%- endif -%}
-        </span>
-    </div>
-    </li>
-{% endfor %}
-</ul>
+  {% if related.size == 0 %}
+    {% assign related = site.posts | where_exp: "p", "p.url != page.url" | sort: "date" | reverse | slice: 0, 3 %}
+    <h2 class="post-header">Newest Posts</h2>
+  {% else %}
+    <h2 class="post-header">Related Posts</h2>
+  {% endif %}
+
+  <ul class="flex post-list">
+    {% for post in related %}
+      <li class="flex post-card">
+        {%- assign date_format = site.minima.date_format | default: "%d.%m.%Y" -%}
+        <div class="post-image">
+          <a href="{{ post.url | relative_url }}">
+            {% if post.image %}
+              <img src="{{ post.image | prepend: site.baseurl_root }}" alt="{{ post.title | escape }}">
+            {% else %}
+              <img src="{{ site.baseurl_root }}/assets/images/default-image.jpg" alt="Default Image">
+            {% endif %}
+          </a>
+        </div>
+        <div class="flex post-info">
+          <h3 class="post-title">
+            <a href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
+          </h3>
+          <div class="post-excerpt">
+            <p>{{ post.excerpt | strip_html | truncate: 300 }}</p>
+          </div>
+          <span class="post-meta">
+            <time datetime="{{ post.date | date_to_xmlschema }}" itemprop="datePublished">
+              {{ post.date | date: date_format }}
+            </time>
+            {%- if post.tags and post.tags.size > 0 -%}
+              ⋅
+              <span class="post-tags">
+                {%- for tag in post.tags -%}
+                  <a href="{{ '/tags/' | append: tag | relative_url }}" class="post-tag">#{{ tag }}</a>
+                  {{ ' ' }}
+                {%- endfor -%}
+              </span>
+            {%- endif -%}
+          </span>
+        </div>
+      </li>
+    {% endfor %}
+  </ul>
+</div>
 <!-- Related posts end -->
