--- a/_sass/components/_post-content.scss
+++ b/_sass/components/_post-content.scss
@@ -7,6 +7,7 @@
 
 .post-content {
   font-size: 1.125em;
+  margin-bottom: 4em;
   
   img { 
     margin: 2em auto;
@@ -19,6 +20,12 @@
     display: block;
     max-width: 100%;
   }
+}
+
+.related-posts {
+  margin-bottom: 3em;
+
+  h2 { margin-bottom: 2em; }
 }
 
 // Responsive styles
