Refactor post tags to use spans instead of links for improved styling; update related posts and post layouts accordingly

--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -27,7 +27,7 @@
               ⋅
               <span class="post-tags">
                 {%- for tag in post.tags -%}
-                  <a href="{{ '/tags/' | append: tag | relative_url }}" class="post-tag">#{{ tag }}</a>
+                  <span class="post-tag">#{{ tag }}</span>
                   {{ ' ' }}
                 {%- endfor -%}
               </span>
