--- a/_includes/related-posts.html
+++ b/_includes/related-posts.html
@@ -44,10 +44,10 @@
           <h3 class="post-title">
             <a href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
           </h3>
-          <div class="post-excerpt">
+          <div class="sans post-excerpt">
             <p>{{ post.excerpt | strip_html | truncate: 300 }}</p>
           </div>
-          <span class="post-meta">
+          <span class="sans post-meta">
             <time datetime="{{ post.date | date_to_xmlschema }}" itemprop="datePublished">
               {{ post.date | date: date_format }}
             </time>
@@ -55,7 +55,7 @@
               ⋅
               <span class="post-tags">
                 {%- for tag in post.tags -%}
-                  <a href="{{ '/tags/' | append: tag | relative_url }}" class="post-tag">#{{ tag }}</a>
+                  <span class="post-tag">#{{ tag }}</span>
                   {{ ' ' }}
                 {%- endfor -%}
               </span>
