--- a/_sass/components/_post-cards.scss
+++ b/_sass/components/_post-cards.scss
@@ -1,6 +1,6 @@
 .post-list {
   gap: 3em;
-  margin: 0;
+  margin: 0 0 3em 0;
   h2, h3, p, li, ol { margin: 0; }
 }
 
@@ -41,6 +41,9 @@
   @include truncate;
   text-overflow: string(" ");
   max-width: 100%;
+  color: $secondary-color;
+
+  time { color: $primary-color; }
 }
 
 .post-tag {
