--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,4 +36,4 @@ layout: default
   <a href="{{ page.url | relative_url }}" hidden></a>
 </article>
 
-{% include related-posts.html %}
+{% include recent-posts.html %}
