Implement dark mode toggle functionality and update styles for improved theme support

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,6 +37,9 @@
     <script src="{{ '/assets/js/lang-redirect.js' | prepend: site.base_url }}"></script>
   {% endif %}
 
+  <!-- Dark mode toggle -->
+  <script src="{{ '/assets/js/theme-toggle.js' | prepend: site.base_url }}"></script>
+
   <!-- Glightbox CSS -->
   {% if page.url contains "photo-gallery" or page.url contains "dima-afonin" %}
     <link rel="stylesheet" href="/assets/glightbox.css">
