--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,25 @@
 <header class="site-header" role="banner">
   <div class="wrapper">
-      <nav class="flex site-nav">
-        <a class="site-title" rel="author" href="{{ "/" | relative_url }}" title="{{ site.title | escape }}">shouldgo.me</a>
-        <input type="checkbox" id="burger-toggle" class="burger-toggle" />
-        <label for="burger-toggle" class="flex burger" aria-hidden="true"><span></span><span></span><span></span></label>
-        {% include navlinks.html %}
-        {% include lang-switcher.html %}
-      </nav>
+    <nav class="flex site-nav">
+      <a
+        class="site-title"
+        rel="author"
+        href="{{ "/" | relative_url }}"
+        title="{{ site.title | escape }}">shouldgo.me</a>
+      <input
+        type="checkbox"
+        id="burger-toggle"
+        class="burger-toggle" />
+      <label
+        for="burger-toggle"
+        class="flex burger"
+        aria-hidden="true">
+        <span></span>
+        <span></span>
+        <span></span>
+      </label>
+      {% include navlinks.html %}
+      {% include switcher.html %}
+    </nav>
   </div>
 </header>
