--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -18,7 +18,7 @@
 .nav-links { gap: 2em; }
 
 .nav-links a, .lang-switcher a {
-  color: $secondary-color;
+  color: $grey-color;
   &:hover, &.active { color: inherit; }
 }
 
@@ -26,18 +26,26 @@
   display: flex;
   gap: .25em;
   position: absolute;
-  right: 4em;
+  right: 3em;
   align-items: center;
 
   > * {
     display: inline-block;
-    padding: .125em .5em .25em;
+    padding: .25em .5em;
     cursor: pointer;
   }
 
   span {
-        @include light-bg;
+        @include highlight;
   }
+}
+
+.theme-toggle {
+  background: none;
+  border: none;
+  margin-right: 1em;
+  cursor: pointer;
+  font-size: 1.25em;
 }
 
 .burger-toggle { display: none; }
@@ -47,8 +55,9 @@
   right: 0;
   justify-content: center;
   gap: .3em;
-  width: 2em;
-  height: 2em;
+  width: 2.25em;
+  height: 2.25em;
+  padding: .5em;
   cursor: pointer;
   z-index: 101;
 
@@ -56,7 +65,11 @@
     display: block;
     height: .1em;
     width: 100%;
-    background: $primary-color;
+    background: $dark-color;
+    
+    @include dark-mode {
+      background: $light-color;
+    }
   }
 }
 
