--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>
+  <!-- Performance: DNS prefetch for external resources -->
+  <link rel="dns-prefetch" href="//fonts.googleapis.com">
+  <link rel="dns-prefetch" href="//fonts.gstatic.com">
+
+  <!-- Generate title and description once to avoid duplication -->
+  {% capture page_title %}
     {% if page.title == "titles.about" %}
       {% t titles.about %} | {% t global.site_title %}
     {% elsif page.title == "titles.gallery" %}
@@ -15,85 +20,81 @@
     {% else %}
       {% t global.site_title %}
     {% endif %}
-  </title>
+  {% endcapture %}
 
-  {%- seo title=false -%}
-  <link rel="stylesheet" href="{{ "/assets/main.css" | | prepend: site.baseurl_root }}">
+  {% capture page_description %}
+    {% if page.description %}
+      {% if page.description contains 'descriptions.' %}
+        {% t page.description %}
+      {% else %}
+        {{ page.description }}
+      {% endif %}
+    {% elsif page.excerpt %}
+      {{ page.excerpt | strip_html | truncate: 160 }}
+    {% elsif page.layout == 'post' %}
+      {{ page.content | strip_html | truncate: 160 }}
+    {% elsif page.url == '/' or page.url == '/index.html' %}
+      {% t descriptions.home %}
+    {% else %}
+      {{ site.description }}
+    {% endif %}
+  {% endcapture %}
+
+  <!-- SEO Meta Tags -->
+  <title>{{ page_title | strip }}</title>
+  <meta name="description" content="{{ page_description | strip }}">
+  <meta name="author" content="{% t global.author %}">
+  <link rel="canonical" href="{{ page.url | absolute_url }}">
+
+  <!-- OpenGraph Meta Tags -->
+  <meta property="og:title" content="{{ page_title | strip }}">
+  <meta property="og:description" content="{{ page_description | strip }}">
+  <meta property="og:url" content="{{ page.url | absolute_url }}">
+  <meta property="og:site_name" content="{% t global.site_title %}">
+  <meta property="og:type" content="{% if page.layout == 'post' %}article{% else %}website{% endif %}">
+  <meta property="og:image" content="{{ page.image | default: '/assets/images/og-image.jpg' | absolute_url }}">
+  <meta property="og:locale" content="{% if site.lang %}{{ site.lang }}{% else %}en{% endif %}">
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="{{ page_title | strip }}">
+  <meta name="twitter:description" content="{{ page_description | strip }}">
+  <meta name="twitter:image" content="{{ page.image | default: '/assets/images/og-image.jpg' | absolute_url }}">
+  <meta name="twitter:site" content="@shouldgo">
+
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="{{ "/assets/main.css" | prepend: site.baseurl_root }}">
   {%- feed_meta -%}
+
+  <!-- Performance: Optimized font loading with font-display swap -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+  <!-- Analytics (Production only) -->
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
   {%- endif -%}
 
-  <!-- Noto Fonts Google API -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link
-    rel="preconnect"
-    href="https://fonts.gstatic.com"
-    crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
-  <!-- Language Redirect -->
+  <!-- Conditional Assets -->
   {% if page.url == "/" or page.url == "" or page.url == "/index.html" %}
-    <script src="{{ '/assets/js/lang-redirect.js' | prepend: site.base_url }}"></script>
+    <!-- Language Redirect for homepage -->
+    <script src="{{ '/assets/js/lang-redirect.js' | prepend: site.baseurl_root }}"></script>
   {% endif %}
 
-  <!-- Dark mode toggle -->
-  <script src="{{ '/assets/js/theme-toggle.js' | prepend: site.base_url }}"></script>
-
-  <!-- Glightbox CSS -->
   {% if page.url contains "photo-gallery" or page.url contains "dima-afonin" %}
-    <link rel="stylesheet" href="/assets/glightbox.css">
+    <!-- Glightbox CSS for gallery pages -->
+    <link rel="stylesheet" href="{{ '/assets/glightbox.css' | prepend: site.baseurl_root }}">
   {% endif %}
 
-  <!-- Standard Favicon -->
-  <link
-    rel="icon"
-    href="{{ '/assets/icon/favicon.ico' | | prepend: site.baseurl_root }}"
-    type="image/x-icon">
-  <link
-    rel="shortcut icon"
-    href="{{ '/assets/icon/favicon.ico' | | prepend: site.baseurl_root }}"
-    type="image/x-icon">
-  <link
-    rel="icon"
-    type="image/png"
-    sizes="32x32"
-    href="{{ '/assets/icon/favicon-32x32.png' | | prepend: site.baseurl_root }}">
-  <link
-    rel="icon"
-    type="image/png"
-    sizes="16x16"
-    href="{{ '/assets/icon/favicon-16x16.png' | | prepend: site.baseurl_root }}">
-  <link
-    rel="apple-touch-icon"
-    sizes="180x180"
-    href="{{ '/assets/icon/apple-touch-icon.png' | | prepend: site.baseurl_root }}">
-  <link
-    rel="icon"
-    type="image/png"
-    sizes="192x192"
-    href="{{ '/assets/icon/android-chrome-192x192.png' | | prepend: site.baseurl_root }}">
-  <link
-    rel="icon"
-    type="image/png"
-    sizes="512x512"
-    href="{{ '/assets/icon/android-chrome-512x512.png' | | prepend: site.baseurl_root }}">
+  <!-- Theme toggle (always loaded) -->
+  <script src="{{ '/assets/js/theme-toggle.js' | prepend: site.baseurl_root }}"></script>
 
-    <!-- Open Graph -->
-  <meta property="og:site_name" content="{{ site.title }}">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="{{ page.title | default: site.title }}">
-  <meta property="og:description" content="{{ page.excerpt | strip_html | default: site.description }}">
-  <meta property="og:url" content="{{ page.url | absolute_url }}">
-  <meta property="og:image" content="{{ page.image | default: '/assets/images/og-image.jpg' | | prepend: site.baseurl_root }}">
-  <meta property="og:locale" content="en_US">
-  <meta property="article:publisher" content="https://www.facebook.com/dima.afonin">
-
-    <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="{{ page.title | default: site.title }}">
-  <meta name="twitter:description" content="{{ page.excerpt | strip_html | default: site.description }}">
-  <meta name="twitter:url" content="{{ page.url | absolute_url }}">
-  <meta name="twitter:image" content="{{ page.image | default: '/assets/images/og-image.jpg' | | prepend: site.baseurl_root }}">
-  <meta name="twitter:site" content="@shouldgo">
+  <!-- Favicons -->
+  <link rel="icon" href="{{ '/assets/icon/favicon.ico' | prepend: site.baseurl_root }}" type="image/x-icon">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ '/assets/icon/favicon-32x32.png' | prepend: site.baseurl_root }}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ '/assets/icon/favicon-16x16.png' | prepend: site.baseurl_root }}">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/icon/apple-touch-icon.png' | prepend: site.baseurl_root }}">
+  <link rel="icon" type="image/png" sizes="192x192" href="{{ '/assets/icon/android-chrome-192x192.png' | prepend: site.baseurl_root }}">
+  <link rel="icon" type="image/png" sizes="512x512" href="{{ '/assets/icon/android-chrome-512x512.png' | prepend: site.baseurl_root }}">
 </head>
