--- a/_includes/recent-posts.html
+++ b/_includes/recent-posts.html
@@ -4,40 +4,7 @@
   <ul class="flex post-list">
     {% assign recent_posts = site.posts | where_exp: "p", "p.url != page.url" | sort: "date" | reverse | slice: 0, 5 %}
     {% for post in recent_posts %}
-      <li class="flex post-card">
-        {%- assign date_format = site.minima.date_format | default: "%d.%m.%Y" -%}
-        <div class="post-image">
-          <a href="{{ post.url | relative_url }}">
-            {% if post.image %}
-              <img src="{{ post.image | prepend: site.baseurl_root }}" alt="{{ post.title | escape }}">
-            {% else %}
-              <img src="{{ site.baseurl_root }}/assets/images/default-image.jpg" alt="Default Image">
-            {% endif %}
-          </a>
-        </div>
-        <div class="flex post-info">
-          <h3 class="post-title">
-            <a href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
-          </h3>
-          <div class="sans post-excerpt">
-            <p>{{ post.excerpt | strip_html | truncate: 300 }}</p>
-          </div>
-          <span class="sans post-meta">
-            <time datetime="{{ post.date | date_to_xmlschema }}" itemprop="datePublished">
-              {{ post.date | date: date_format }}
-            </time>
-            {%- if post.tags and post.tags.size > 0 -%}
-              ⋅
-              <span class="post-tags">
-                {%- for tag in post.tags -%}
-                  <span class="post-tag">#{{ tag }}</span>
-                  {{ ' ' }}
-                {%- endfor -%}
-              </span>
-            {%- endif -%}
-          </span>
-        </div>
-      </li>
+      {% include post-card.html %}
     {% endfor %}
   </ul>
 </div>
