--- a/_includes/head.html
+++ b/_includes/head.html
@@ -80,7 +80,7 @@
   <meta property="og:url" content="{{ page.url | absolute_url }}">
   <meta property="og:site_name" content="{% t global.site_title %}">
   <meta property="og:type" content="{% if page.layout == 'post' %}article{% else %}website{% endif %}">
-  <meta property="og:image" content="{{ page.image | default: '/assets/images/og-image.jpg' | absolute_url }}">
+  <meta property="og:image" content="{{ page.image | default: '/assets/images/og-image.jpg' | prepend: site.baseurl_root | prepend: site.url }}">
   <meta property="og:locale" content="{% if site.lang %}{{ site.lang }}{% else %}en{% endif %}">
   {% if site.lang == 'ru' %}
     <meta property="og:locale:alternate" content="en">
@@ -92,7 +92,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="{{ page_title | strip }}">
   <meta name="twitter:description" content="{{ page_description | strip }}">
-  <meta name="twitter:image" content="{{ page.image | default: '/assets/images/og-image.jpg' | absolute_url }}">
+  <meta name="twitter:image" content="{{ page.image | default: '/assets/images/og-image.jpg' | prepend: site.baseurl_root | prepend: site.url }}">
   <meta name="twitter:site" content="@shouldgo">
 
     <!-- Stylesheets -->
