--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
     </main>
 
     {%- include footer.html -%}
+    {%- include cookie-consent.html -%}
 
     <!-- Glightbox JS -->
     {% if page.url contains "photo-gallery" or page.url contains "dima-afonin" %}
