Goat Tracker init

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -127,6 +127,12 @@
     </script>
   {%- endif -%}
 
+  <!-- Goat Tracker -->
+  <script
+    data-goatcounter="https://shouldgo.goatcounter.com/count"
+    async
+    src="//gc.zgo.at/count.js"></script>
+
   <!-- Conditional Assets -->
   {% if page.url == "/" or page.url == "" or page.url == "/index.html" %}
     <!-- Language Redirect for homepage -->
